--- a/src/Styles/Index.css
+++ b/src/Styles/Index.css
@@ -1,6 +1,9 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  min-height: calc(100vh - (100px + 100px));
 }
+
+
 
 .button{
   margin-top: 25px;
@@ -29,5 +32,33 @@ body {
   background-color: white;
   text-decoration: solid;
   color: black;
+  font-weight: bold;
+}
+
+.divf{
+  display: flex;
+  position: relative;
+  margin-bottom: 0%;
+}
+
+.foot{
+  
+  background-image: linear-gradient(to right bottom, white, black, black, white);
+  color: white;
+  text-align: center;
+  text-decoration: solid;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  margin-bottom: 0%;
+  position:absolute;
+  width: 100%;
+  align-items: flex-end;
+  border-bottom: 0%;
+  
+
+}
+
+.divcart{
+  font-size: 10px;
+  text-align: center;
   font-weight: bold;
 }
